# renxin

./: .gitignore  AGENTS.md  GEMINI.md  package-lock.json  package.json
.roo/: mcp.json
.roo/rules/: rules.md
docs/: 01_product_requirements.md  02_architecture.md  03_data_contracts.md  04_uiux.md  05_operations.md  about.md  components.md  data.md  other.md  spec.md  uiux.md
prompts/: implementation_plan.md
renxin-app/: deno.json  package.json  vite.config.ts
renxin-app/src/: App.css  App.tsx  Router.tsx  main.tsx
renxin-app/src-tauri/: Cargo.toml  tauri.conf.json
renxin-app/src-tauri/capabilities/: default.json
renxin-app/src-tauri/src/: commands.rs  config.rs  database.rs  lib.rs  logging.rs  main.rs  state.rs
renxin-app/src/components/ui/: Button.module.css  Button.test.tsx  Button.tsx  Header.module.css  Header.tsx  Input.module.css  Input.tsx
renxin-app/src/lib/: dummy-data.ts
renxin-app/src/pages/: Game.module.css  Game.test.tsx  Game.tsx  GameResult.module.css  GameResult.tsx  Home.module.css  Home.test.tsx  Home.tsx  NewPlayerRegistration.module.css  NewPlayerRegistration.tsx  PlayerManagement.module.css  PlayerManagement.test.tsx  PlayerManagement.tsx  RoundEndPlayback.module.css  RoundEndPlayback.test.tsx  RoundEndPlayback.tsx  StartupRedirector.test.tsx  StartupRedirector.tsx  Statistics.module.css  Statistics.tsx
