[package]
name = "renxin-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "renxin_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
tauri-plugin-fs = "2.4.1"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2", features = ["colored"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
zip = "4.3.0"
chrono = "0.4"
tauri-plugin-dialog = "2.3.2"
regex = "1"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.20.0"
regex = "1"
chrono = "0.4"
once_cell = "1.19.0"
